--- a/AnandERP/AERP.Web.UI/packages.config
+++ b/AnandERP/AERP.Web.UI/packages.config
@@ -3,7 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
-  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net452" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net452" requireReinstallation="true" />
   <package id="DotNetOpenAuth.AspNet" version="4.3.4.13329" targetFramework="net452" />
   <package id="DotNetOpenAuth.Core" version="4.3.4.13329" targetFramework="net452" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.3.4.13329" targetFramework="net452" />
@@ -16,7 +16,7 @@
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
   <package id="MicosoftReportViewerWebForms_v11" version="1.0.1" targetFramework="net452" />
-  <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net452" requireReinstallation="true" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.JavaScript" version="0.22.9-build00167" targetFramework="net452" />
@@ -63,8 +63,8 @@
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net452" />
-  <package id="System.Net.Http" version="4.3.4" targetFramework="net452" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Web.Providers" version="1.2" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
